# metaphor

./: BSD.txt  COPYING.txt  DESIGN.md  MIT.txt  Makefile.am  QUALITY.md  README.md  TODO.md  autogen.sh  configure.ac  metaphor.pc.in
configuration/: locations.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
include/metaphor/intercept/: intercept_calls.h  syscall.h
include/metaphor/os/: authentication.h  filesystem.h  os.h  processes.h  types.h  whitelist.h
include/metaphor/utils/: debug.h  fileutils.h  hashutils.h  stringutils.h
profile/: Makefile.am
src/: Makefile.am
src/programs/: Makefile.am  metaphor_app.c
templates/: meminfo  stat  uptime  vmstat
tests/: Makefile.am  fileutils_tests.c  hashutils_tests.c  metaphor_filesystem_syscalls.c  metaphor_filesystem_tests.c  metaphor_filesystem_tests.h  metaphor_memory_calls.c  metaphor_memory_tests.c  metaphor_platform_testing.c  metaphor_processes_syscalls.c  metaphor_processes_tests.c  metaphor_processes_tests.h  metaphor_testing.c  metaphor_unix_integration_tests.c  run_metaphor_filesystem_tests.c  run_metaphor_processes_tests.c  stringutils_tests.c
tests/data/: hello.txt  text.txt
tools/: kernel_style.sh
